@@ -14,9 +14,9 @@
 #define	HOT_VERSION_MAJ		1
 #define	HOT_VERSION_MID		5
 #define	HOT_VERSION_MIN		0
-#define	HOT_VERSION_REL_DATE	"2011-09-10"
-#define	HOT_VERSION_BETA	1
-#define	HOT_VERSION_BETA_STR	"rc6"
+#define	HOT_VERSION_REL_DATE	"2011-09-15"
+#define	HOT_VERSION_BETA	0
+#define	HOT_VERSION_BETA_STR	"final"
 #define	HOT_VERSION_STR		STRINGIFY(HOT_VERSION_MAJ) "." STRINGIFY(HOT_VERSION_MID) "." STRINGIFY(HOT_VERSION_MIN)
 #define	GLQUAKE_VERSION		1.00
 #define	ENGINE_VERSION		1.23
